--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "lint": "eslint src",
+    "typecheck": "tsc --noEmit",
+    "check:all": "pnpm lint && pnpm test && pnpm build",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run",
@@ -21,17 +24,24 @@
     "@tauri-apps/plugin-fs": "2.4.5",
     "@tauri-apps/plugin-opener": "2.5.3",
     "@tauri-apps/plugin-sql": "2.3.2",
+    "lucide-react": "0.544.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "react-router-dom": "7.8.2",
     "zustand": "5.0.11"
   },
   "devDependencies": {
+    "@eslint/js": "9.35.0",
     "@tailwindcss/vite": "4.2.1",
     "@tauri-apps/cli": "2.10.0",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
+    "eslint": "9.35.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "globals": "16.4.0",
+    "typescript-eslint": "8.41.0",
     "@vitejs/plugin-react": "5.1.4",
     "jsdom": "28.1.0",
     "tailwindcss": "4.2.1",
